$Id$
===============================================================

245	Luke Howard <lukeh@padl.com>

	* don't leak LDAP connection if do_bind() failed or
	  descriptor owner had changed. If do_bind() failed the
	  underlying descriptor would also be leaked, causing a
	  large number of sockets to be consumed during failover
	* add nss_initgroups_ignoreusers parameter to ldap.conf,
	  returns NOTFOUND if nss_ldap's initgroups() is called
	  for users (comma separated)
	* try to deal with systems that have headers for both
	  versions of the SASL library installed
	* better logging of failed connections and reconnections
	* patch from Dean Michaels <dean@interdynamix.com>:
	  build with Netscape 5 library on Solaris
	* patch from Ralf Haferkamp <rhafer@suse.de>:
	  manual page fix to bind_policy

244	Luke Howard <lukeh@padl.com>

	* patch from Ralf Haferkamp <rhafer@suse.de>:
	  enusre bytesleft macro does not return values < 0
	* include <sys/param.h> in ldap-nss.c

243	Luke Howard <lukeh@padl.com>

	* fix for BUG#225: invalid pointer dereferencing when
	  reading rootpw

242	Luke Howard <lukeh@padl.com>

	* fixes for compiling on Solaris 10

241	Luke Howard <lukeh@padl.com>

	* new, more robust reconnection logic
	* both "host" and "uri" directives can be used in
	  ldap.conf
	* new (undocumented) nss_reconnect_tries,
	  nss_reconnect_sleeptime, nss_reconnect_maxsleeptime,
	  nss_reconnect_maxconntries directives
	* reload configuration file if changed

240	Luke Howard <lukeh@padl.com>

	* new API for resolving automounts (requires custom
	  autofs plugin for Linux at present):
	  _nss_ldap_setautomntent(), _nss_ldap_getautomntent(),
	  _nss_ldap_endautomntent(), _nss_ldap_getautomntbyname_r()
	* fix for BUG#200: rename SOCKLEN_T as it conflicts on AIX
	* fix for BUG#205: accept line feeds in ldap.conf
	* fix for BUG#211: nss_ldap fails to start TLS on referred
	  connections
	* fix for BUG#213: initgroups crash if RFC2307bis undefined